Closed Bug 418148 Opened 18 years ago Closed 18 years ago

esc doesn't close "Add Search Engine" dialog

Categories

(Camino Graveyard :: General, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: samuel.sidler+old, Assigned: stuart.morgan+bugzilla)

References

()

Details

(Keywords: fixed1.8.1.13)

Attachments

(1 file)

STR: 1. Go to the URL 2. Click on any of the OpenSearch links (the ones with the A9 logo) -- A dialog appears 3. Press esc AR: Camino beeps. ER: The dialog should close. Not sure if this is needed for l10n, but requesting 1.6b3 just in case.
Flags: camino1.6b3?
No l10n impact.
Assignee: nobody → stuart.morgan
Flags: camino1.6b3? → camino1.6b3-
Target Milestone: --- → Camino1.6
Attached patch fixSplinter Review
Attachment #303936 - Flags: superreview?(mark)
Comment on attachment 303936 [details] [diff] [review] fix Since I've been dumping a lot into mento's queue, moving some requests over to pink.
Attachment #303936 - Flags: superreview?(mark) → superreview?(mikepinkerton)
Attachment #303936 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.13
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: