Camino only - Bug 418148: Esc doesn't close Add Search Engine dialog. r/sr=pink